# BookClub

./: README.md
Real_World_Haskell/Shane_H/chapter_1/: text.txt
Real_World_Haskell/Shane_H/chapter_3/: #question3.hs#  #question4.hs#  #question5,hs#  AlgebraicVector.hs  BookStore.hs  ListAdt.hs  Tree.hs  question1.hs  question10.hs  question11.hs  question12.hs  question13.hs  question14.hs  question2.hs  question2.hs~  question3.hs  question5.hs  question6.hs  question7.hs  question8.hs  question9.hs
Real_World_Haskell/Shane_H/chapter_4/: FirstWord.hs  FixLines.hi  FixLines.hs  IntParse.hs  InteractWith  InteractWith.hs  SplitLines.hs  question1.hs  question10.hs  question11.hs  question12.hs  question13.hs  question14.hs  question2.hs  question3.hs  question4.hs  question5.hs  question6.hs  question7.hs  question8.hs
Real_World_Haskell/Shane_H/chapter_5/: CHANGELOG.md  JsonParse.cabal  LICENSE  Main.hi  Main.hs  Prettify.hs  PrettyJSON.hs  PrettyStub.hi  PrettyStub.hs  PutJSON.hs  Setup.hs.save0  SimpleJSON.hi  question1.hs  question2.hs  simple
Real_World_Haskell/Slides/second meeting/: Dublin Haskell BookClub 3-5.pptx
Real_World_Haskell/owen-shepherd/: LICENSE  README.md  rwh.cabal
Real_World_Haskell/owen-shepherd/src/: Ch03.hs  Ch05.hs
Real_World_Haskell/owen-shepherd/test/: Main.hs  TestCh03.hs  TestCh05.hs
chapter_1/: WC.hs
chapter_2/: add.hs  lastButOne.hs  myDrop.hs
