cabal-version:      2.4
name:               rwh
version:            0.1.0.0
synopsis:           Real World Haskell solutions
homepage:
license:            MIT
license-file:       LICENSE
author:             Owen Shepherd
maintainer:         owen@owen.cafe

library
    exposed-modules:    Ch03
                      , Ch05
    build-depends:      base >=4.14.1.0
    hs-source-dirs:     src
    default-language:   Haskell2010

test-suite rwh-test
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Main.hs
    other-modules:      TestCh03
                      , TestCh05
    build-depends:      base >=4.14.1.0
                      , rwh
                      , tasty
                      , tasty-hunit
                      , tasty-hedgehog
                      , hedgehog

